// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyStore > getKey > Retrieves the key from the store > KeyStore.getKey() 1`] =
  `CryptoKey {}`;

exports[
  `KeyStore > getKey > Retrieves the key from the store > Storage.get('MENU_WIDTH') 1`
] = `null`;

exports[`KeyStore > getKey > Retrieves the key from the store > Storage.get('THEME') 1`] =
  `null`;

exports[
  `KeyStore > getKey > Retrieves the key from the store > Storage.get('UPDATE_SEEN') 1`
] = `null`;

exports[
  `KeyStore > getKey > Retrieves the key from the store > Storage.get('UPDATE_STRATEGY') 1`
] = `null`;

exports[
  `KeyStore > getKey > Retrieves the key from the store > Storage.get('USERNAME') 1`
] = `null`;

exports[`KeyStore > getKey > Retrieves the key from the store > allCalls 1`] = `[]`;

exports[
  `KeyStore > getKey > Retrieves the key from the store > document.body.outerHTML 1`
] = `"<body class="theme--system"></body>"`;

exports[`KeyStore > getKey > Retrieves the key from the store > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`KeyStore > getKey > Retrieves the key from the store > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`KeyStore > getKey > Retrieves the key from the store > openedPopup 1`] =
  `undefined`;

exports[`KeyStore > getKey > Retrieves the key from the store > selectedTheme 1`] =
  `"System"`;

exports[`KeyStore > getKey > Retrieves the key from the store > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "set": [Function],
    "size": 0,
    "store": [Function],
  },
  "username": "",
}
`;

exports[`KeyStore > getKey > Retrieves the key from the store > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`KeyStore > reset > Resets the store > KeyStore.getKey() 1`] = `undefined`;

exports[`KeyStore > reset > Resets the store > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`KeyStore > reset > Resets the store > Storage.get('THEME') 1`] = `null`;

exports[`KeyStore > reset > Resets the store > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`KeyStore > reset > Resets the store > Storage.get('UPDATE_STRATEGY') 1`] =
  `null`;

exports[`KeyStore > reset > Resets the store > Storage.get('USERNAME') 1`] = `null`;

exports[`KeyStore > reset > Resets the store > allCalls 1`] = `[]`;

exports[`KeyStore > reset > Resets the store > document.body.outerHTML 1`] =
  `"<body class="theme--system"></body>"`;

exports[`KeyStore > reset > Resets the store > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`KeyStore > reset > Resets the store > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`KeyStore > reset > Resets the store > openedPopup 1`] = `undefined`;

exports[`KeyStore > reset > Resets the store > selectedTheme 1`] = `"System"`;

exports[`KeyStore > reset > Resets the store > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "set": [Function],
    "size": 0,
    "store": [Function],
  },
  "username": "",
}
`;

exports[`KeyStore > reset > Resets the store > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`KeyStore > storeKey > Stores the given key in the store > KeyStore.getKey() 1`] =
  `CryptoKey {}`;

exports[
  `KeyStore > storeKey > Stores the given key in the store > Storage.get('MENU_WIDTH') 1`
] = `null`;

exports[
  `KeyStore > storeKey > Stores the given key in the store > Storage.get('THEME') 1`
] = `null`;

exports[
  `KeyStore > storeKey > Stores the given key in the store > Storage.get('UPDATE_SEEN') 1`
] = `null`;

exports[
  `KeyStore > storeKey > Stores the given key in the store > Storage.get('UPDATE_STRATEGY') 1`
] = `null`;

exports[
  `KeyStore > storeKey > Stores the given key in the store > Storage.get('USERNAME') 1`
] = `null`;

exports[`KeyStore > storeKey > Stores the given key in the store > allCalls 1`] = `[]`;

exports[
  `KeyStore > storeKey > Stores the given key in the store > document.body.outerHTML 1`
] = `"<body class="theme--system"></body>"`;

exports[`KeyStore > storeKey > Stores the given key in the store > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`KeyStore > storeKey > Stores the given key in the store > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`KeyStore > storeKey > Stores the given key in the store > openedPopup 1`] =
  `undefined`;

exports[`KeyStore > storeKey > Stores the given key in the store > selectedTheme 1`] =
  `"System"`;

exports[`KeyStore > storeKey > Stores the given key in the store > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "set": [Function],
    "size": 0,
    "store": [Function],
  },
  "username": "",
}
`;

exports[`KeyStore > storeKey > Stores the given key in the store > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
